Handling RecipientsDTO parsing